Bug 91382 - UI: Crash after visiting Sidebar Properties Page
Summary: UI: Crash after visiting Sidebar Properties Page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Philippe Jung
URL:
Whiteboard: target:5.0.0
Keywords: needUITest
: 91386 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-19 12:14 UTC by Gordo
Modified: 2018-02-01 17:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-05-19 12:14:59 UTC
1. New Text Document.
2. Open Sidebar -> Properties -> Page and open one of the drop-down menus.
3. Use Sidebar tabbar to switch to something else (Navigator) or exit application.
Result:
Program has stopped working.

Unknown SEH Exception

Windows Vista 64
Version: 5.0.0.0.alpha1+
Build ID: 60fb87cf6cfcbdb1a7ece00e8a2e9d1112903ed0
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-18_14:12:34
Comment 1 Philippe Jung 2015-05-19 15:44:40 UTC
warn:legacy.osl:4535:1:vcl/source/window/window.cxx:318: Window ( N2sw7sidebar17PagePropertyPanelE ()) with live SystemWindows destroyed:  N3svx7sidebar14PopupContainerE () N3svx7sidebar14PopupContainerE () N3svx7sidebar14PopupContainerE () N3svx7sidebar14PopupContainerE ()
Window ( N2sw7sidebar17PagePropertyPanelE ()) with live SystemWindows destroyed:  N3svx7sidebar14PopupContainerE () N3svx7sidebar14PopupContainerE () N3svx7sidebar14PopupContainerE () N3svx7sidebar14PopupContainerE ()
Comment 2 Philippe Jung 2015-05-19 16:47:10 UTC
Should be fixed by https://gerrit.libreoffice.org/15817
Comment 3 Commit Notification 2015-05-19 20:18:12 UTC
Philippe Jung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3430d2c2b2c4e24b2757015addada9256e399012

tdf#91382 UI: Crash after visiting Sidebar Properties Page

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Meeks 2015-05-19 20:19:02 UTC
*** Bug 91386 has been marked as a duplicate of this bug. ***
Comment 5 Michael Meeks 2015-05-21 15:24:39 UTC
Patch looks plausible; confirmation appreciated.