tdf#91382 UI: Crash after visiting Sidebar Properties Page

When a popup is displayed, no cleaning / disposing is performed.

Change-Id: Ibae0f977360f8862f2d7ff4c753356975dec3771
Reviewed-on: https://gerrit.libreoffice.org/15817
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>